examples/invalid/and.lama
bool t = true ;
int x = 5;

bool exc = x && t ;
print exc ;
